--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"description": "Site institucional do Condomínio Estância da Serra - apresentação, mapa de lotes, galeria e contato.",
 	"scripts": {
 		"dev": "vite",
+		"dev:pages": "vite --base=/estanciaDaSerra/",
 		"build": "vite build",
 		"preview": "vite preview",
 		"deploy": "vite build && gh-pages -d dist"
