--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"gh-pages": "^6.3.0",
 		"postcss": "^8.4.40",
 		"tailwindcss": "^3.4.10",
+		"terser": "^5.43.1",
 		"typescript": "^5.5.4",
 		"vite": "^5.4.1"
 	}
