--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"aos": "^2.3.4",
 		"clsx": "^2.1.1",
 		"emailjs-com": "^3.2.0",
+		"express": "^5.1.0",
 		"framer-motion": "^11.11.9",
 		"leaflet": "^1.9.4",
 		"lenis": "^1.1.13",
