fix: remover branch gh-pages e usar pasta docs na main
- Deletar branch gh-pages que conflitava com configuração
- Deploy agora usa pasta docs/ na branch main
- Compatível com GitHub Pages configurado para main branch
- Arquivos build disponíveis em docs/ para GitHub Pages

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"dev:pages": "vite --base=/estanciaDaSerra/",
 		"build": "vite build",
 		"preview": "vite preview",
-		"deploy": "vite build && gh-pages -d dist"
+		"deploy": "vite build && xcopy /E /I /Y dist\\* docs\\"
 	},
 	"keywords": [
 		"chacreamento",
